--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.0",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
